Intersection/Ros2/deis_ws/log/build_2020-12-12_01-03-30/py_intersection_mgr/stderr.log
  File "/home/ubuntu/deis_ws/install/py_intersection_mgr/lib/python3.8/site-packages/py_intersection_mgr/intersection_mgr.py", line 108
    if markerIds not None:
                     ^
SyntaxError: invalid syntax

